# HistogramClassifier

./: .gitignore  CMakeLists.txt  Makefile
header_files/: header.hpp
source_files/: classifier.cpp  image.cpp  main.cpp  report.py
